# Slate

./: .gitignore  README.md  pyproject.toml
db/: schema.sql
slate/: __init__.py  app.py  browser.py  browser_store.py  cli.py  db.py  ipc.py  models.py  notes.py  roadmap.py  status.py
src/: browser.js  browserStore.js  index.js  ipc.js  notes.js  roadmap.js  slate.js
src/core/: moduleRegistry.ts
src/state/: appState.ts
src/types/: modules.ts
state/: roadmap_status.json
test/: slate.test.js
tests/: test_app.py
